--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -1,10 +1,31 @@
-/*
- * Provides a drop-in pointer for the default Trix stylesheet that will format the toolbar and
- * the trix-editor content (whether displayed or under editing). Feel free to incorporate this
- * inclusion directly in any other asset bundle and remove this file.
- *
- *= require trix
-*/
+trix-toolbar {
+  margin-top: 2em;
+  position: sticky;
+}
+
+trix-toolbar .trix-button.trix-button--icon {
+  border: 0;
+}
+
+trix-toolbar .trix-button-group {
+  border: 0;
+}
+
+trix-toolbar .trix-button-group:not(:first-child) {
+  margin-left: 0;
+}
+
+.trix-button-row {
+  margin-left: -0.5em;
+}
+
+.trix-content .attachment--preview img {
+  display: inline;
+}
+
+.trix-content h1 strong {
+  font-weight: bold;
+}
 
 /*
  * We need to override trix.css’s image gallery styles to accommodate the
