--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -32,9 +32,8 @@
 <%= render "layouts/favicons" %>
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
-<%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
-<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+<%= render "layouts/stylesheets" %>
 <%= javascript_importmap_tags %>
 
 <% if prevent_indexing? %>
